# turul-llm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/turul-llm-core/: Cargo.toml  README.md
crates/turul-llm-core/src/: client.rs  error.rs  lib.rs  request.rs  response.rs
crates/turul-llm-ollama/: Cargo.toml  README.md
crates/turul-llm-ollama/src/: lib.rs
crates/turul-llm-openai/: Cargo.toml  README.md
crates/turul-llm-openai/src/: lib.rs
docs/adr/: ADR-001-llmclient-trait-shape.md
examples/greet-ollama/: Cargo.toml  README.md
examples/greet-ollama/src/: main.rs
