[package]
name = "turul-llm-ollama"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false
description = "Ollama adapter for the turul-llm LlmClient trait. Path-only until first-release gates clear."

[dependencies]
turul-llm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
