[package]
name = "turul-llm-openai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "OpenAI-compatible adapter for the turul-llm LlmClient trait. Targets /chat/completions with response_format = json_schema."

[dependencies]
turul-llm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
